<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Baraka Sky</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="facebook_app_id" tools:ignore="ExtraTranslation">778572012486403</string>
    <string name="fb_login_protocol_scheme">fb778572012486403</string>
    <string name="login_emaill">Email...</string>
    <string name="login_password">Password...</string>
    <string name="login_button">Login</string>
    <string name="login_phone_number_button">Phone Number</string>
    <string name="login_register_link">Don\'t Have An Account, Need New Account?</string>
    <string name="login_sociel_login_with">Or Login With</string>
    <string name="login_forget_password">Forget Password ?</string>
    <string name="login_toast_error_email">Please Write Your Email....</string>
    <string name="login_toast_error_password">Please Write Your Password....</string>
    <string name="login_toast_success">You Are Logged In Successfully....</string>
    <string name="login_toast_not_success">"Error : "</string>
    <string name="login_loadingbar_title">Login</string>
    <string name="login_loadingbar_message">Please Wait, While We Are Allowing You To Login Into Your Account....</string>
    <string name="login_google_sign_in_connection_faild">Connection To Google Sign In Faild....</string>
    <string name="login_google_sign_in_not_auth">Not Authenticted : </string>
    <string name="login_google_sign_in_result_success">Please Wait, While We Are Getting Your Auth Result....</string>
    <string name="login_google_sign_in_result_not_success">Can\'t get Auth Result</string>
    <string name="login_google_sign_in_loadingbar_title">Google Sign In</string>
    <string name="login_google_sign_in_loadingbar_message">Please Wait, While We Are Allowing You To Login Using Your Google Account....</string>
    <string name="login_verify_emaill_account">Please Verify Your Account From Your Email First...</string>
    <string name="login_errorcode_invald_customtoken">The custom token format is incorrect. Please check the documentation.</string>
    <string name="login_errorcode_customtoken_mismatch">The custom token corresponds to a different audience.</string>
    <string name="login_errorcode_invaild_credential">The supplied auth credential is malformed or has expired.</string>
    <string name="login_errorcode_invaild_email">The email address is badly formatted.</string>
    <string name="login_errorcode_invaild_email_error">The email address is badly formatted.</string>
    <string name="login_errorcode_wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="login_errorcode_wrong_password_error">password is incorrect</string>
    <string name="login_errorcode_user_mismatch">The supplied credentials do not correspond to the previously signed in user</string>
    <string name="login_errorcode_requiers_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request</string>
    <string name="login_errorcode_exist_acountwithcredentials">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="login_errorcode_email_inuse">The email address is already in use by another account.</string>
    <string name="login_errorcode_email_inuse_error">The email address is already in use by another account</string>
    <string name="login_errorcode_credential_inuse">This credential is already associated with a different user account.</string>
    <string name="login_errorcode_user_disabled">The user account has been disabled by an administrator.</string>
    <string name="login_errorcode_user_tokkenexpired">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="login_errorcode_user_notfound">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="login_errorcode_invaild_user_tokken">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="login_errorcode_operation_notallowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="login_errorcode_weak_password">The given password is invalid.</string>
    <string name="login_errorcode_weak_password_error">The password is invalid it must 6 characters at least</string>
    <string name="login_errorcode_default">Can not Login</string>
    <string name="phone_login_phone_number_text">Write Phone Number Here...</string>
    <string name="phone_login_verification_code_text">Write Verification Code Here...</string>
    <string name="phone_login_send_verification_code_button">Send Verification Code</string>
    <string name="phone_login_verify_button">Verify</string>
    <string name="phone_login_phone_number_text_isempty">Please Enter Your Phone Number First....</string>
    <string name="phone_login_phone_number_text_invaild">Invalid Phone Number, Please Enter Correct Phone Number With Your Country Code...</string>
    <string name="phone_login_phone_number_text_sent">Code has been Sent, Please Check And Verify....</string>
    <string name="phone_login_phone_numberverfication_code_text_isempty">Please Write Verification Code First....</string>
    <string name="phone_login_verification_code_loadingbar_title">Phone Verification</string>
    <string name="phone_login_verification_code_loadingbar_message">Please Wait, While We Are Authenticating Your Phone....</string>
    <string name="phone_login_verify_verification_code_loadingbar_title">Verification Code</string>
    <string name="phone_login_verify_verification_code_loadingbar_message">Please Wait, While We Are Verifying Verification Code....</string>
    <string name="phone_login_verify_success">Congratulations, You\'re Logged In Successfully...</string>
    <string name="phone_login_toast_not_success">Error :</string>
    <string name="register_emaill">Email...</string>
    <string name="register_password">Password...</string>
    <string name="register_confirm_password">Confirm Password...</string>
    <string name="register_button">Create Account</string>
    <string name="register_toast_error_email">Please Write Your Email....</string>
    <string name="register_toast_error_password">Please Write Your Password....</string>
    <string name="register_toast_error_password_confirm">Please Confirm Your Password....</string>
    <string name="register_toast_error_password_not_match">Your Password doesn\'t Match With Your Confirm Password....</string>
    <string name="register_toast_success">You Are Register Successfully....</string>
    <string name="register_toast_not_success">"Error : "</string>
    <string name="register_loadingbar_title">Creating New Account</string>
    <string name="register_loadingbar_message">Please Wait, While We Are Creating Your New Account....</string>
    <string name="register_send_emaill_verification_message">Registration Successfully, We have Send You A mail. Please Check And Verify Your Account</string>
    <string name="reset_password_message">We Will Mail You A link After When You Provide Email And Click The Send Button. Please Click On That Link To Reset Your Password.</string>
    <string name="reset_password_email">Write Your Email Here...</string>
    <string name="reset_passwodrd_send_button">Send Email</string>
    <string name="reset_passwodrd_toolbar_title">Reset Password</string>
    <string name="reset_passwodrd_email_empty">Please Write Your Valid Email Address First...</string>
    <string name="reset_passwodrd_email_success">Please Check Your Email Account, If You Want To Reset Your Password....</string>
    <string name="reset_passwodrd_email_error">Error :</string>
    <string name="nav_menu_add_new_post">Add New Post</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_message">Messages</string>
    <string name="nav_menu_gold_post">Gold Posts</string>
    <string name="nav_menu_friends_taq">Friends</string>
    <string name="nav_menu_friends">Friends</string>
    <string name="nav_menu_find_friends">Find Friends</string>
    <string name="nav_menu_friends_request_sent">Sent Requests</string>
    <string name="nav_menu_friends_request_recived">Received Requests</string>
    <string name="nav_menu_notifications_taq">Notifications</string>
    <string name="nav_menu_notifications_posts_likes">Posts Likes</string>
    <string name="nav_menu_notifications_posts_dislikes">Posts disLikes</string>
    <string name="nav_menu_notifications_posts_gold">Posts Gold</string>
    <string name="posts_loadingbar_title">Posts Loading</string>
    <string name="posts_loadingbar_message">Loading............</string>
    <string name="nav_menu_friends_request_book">Friends Book</string>
    <string name="nav_menu_settings_taq">Settings</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_logout_taq">Logout</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="setup_username">User Name</string>
    <string name="setup_fullname">Full Name</string>
    <string name="setup_country">Country</string>
    <string name="setup_save_button">Save</string>
    <string name="setup_toast_error_username">Please Write Your User Name....</string>
    <string name="setup_toast_error_fullname">Please Write Your Full Name....</string>
    <string name="setup_toast_error_fullname_sobig">Full Name must be less than 30 character....</string>
    <string name="setup_toast_error_fullname_sosmall">Full Name must be Biger than 10 character....</string>
    <string name="setup_toast_error_username_sosmall">User Name must be Biger than 3 character....</string>
    <string name="setup_toast_error_country">Please Write Your Country....</string>
    <string name="setup_loadingbar_title">Saving Information</string>
    <string name="setup_loadingbar_message">Please Wait, While We Are Creating Your New Account....</string>
    <string name="setup_toast_success">Your Account Is Created Successfully....</string>
    <string name="setup_toast_not_success">"Error : "</string>
    <string name="setup_toast_success_image_store">Profile Image Stored Successfully....</string>
    <string name="setup_toast_success_image_store_database">Profile Image Stored To Database Successfully....</string>
    <string name="setup_toast_not_success_image_store">Error : Image Can\'t Be Croped, Try Again</string>
    <string name="setup_profilrimage_loadingbar_title">Profile Image Update</string>
    <string name="setup_profilrimage_loadingbar_message">Please Wait, While We Are Updating Your Profile Image....</string>
    <string name="setup_toast_not_success_profileimage_store">"Error : "</string>
    <string name="setup_toast_not_slect_profileimage">Please Select Profile Image First...</string>
    <string name="setup_username_isexists">Please Enter Another User Name.</string>
    <string name="profile_profile_full_name">Profile Name</string>
    <string name="profile_profile_user_name">User Name</string>
    <string name="profile_profile_status">Hey There, I\'m Using Baraka Sky App , Developed By Ahmed Taha.</string>
    <string name="profile_profile_country">Country</string>
    <string name="profile_profile_country_lives">Lives In</string>
    <string name="profile_profile_dob">Date Of Birth</string>
    <string name="profile_profile_gender">Gender</string>
    <string name="profile_profile_relationship_status">Relationship Status</string>
    <string name="profile_profile_number_of_posts">Posts</string>
    <string name="profile_profile_number_of_friends">Friends</string>
</resources>