<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    tools:ignore="MissingDefaultResource"
    android:background="@color/colorprofile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@drawable/myscrollbar"
        android:scrollbarSize="@dimen/myscroolbar_size">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_profile_root">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/profile_my_profile_pic_width"
                android:layout_height="@dimen/profile_my_profile_pic_height"
                android:id="@+id/my_profile_pic"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/profile_my_profile_pic_margintop"
                android:src="@drawable/profile"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_full_name"
                android:text="@string/profile_profile_full_name"
                android:layout_below="@+id/my_profile_pic"
                android:layout_marginTop="@dimen/profile_my_profile_full_name_margintop"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_my_profile_full_name_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_user_name"
                android:text="@string/profile_profile_user_name"
                android:layout_below="@+id/my_profile_full_name"
                android:layout_marginTop="@dimen/profile_my_profile_user_name_margintop"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_my_profile_user_name_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_status"
                android:text="@string/profile_profile_status"
                android:layout_below="@+id/my_profile_user_name"
                android:layout_marginTop="@dimen/profile_my_profile_status_margintop"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_my_profile_status_textsize"
                android:textStyle="bold"
                android:padding="@dimen/profile_my_profile_status_padding"
                android:textColor="@android:color/darker_gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_country"
                android:text="@string/profile_profile_country"
                android:layout_below="@+id/my_profile_status"
                android:layout_marginTop="@dimen/profile_my_profile_country_margintop"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_my_profile_country_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_country_lives"
                android:text="@string/profile_profile_country_lives"
                android:layout_below="@+id/my_profile_country"
                android:layout_marginTop="@dimen/profile_my_profile_country_lives_margintop"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_my_profile_country_lives_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_dob"
                android:text="@string/profile_profile_dob"
                android:layout_below="@+id/my_profile_country_lives"
                android:layout_marginTop="@dimen/profile_my_profile_dob_margintop"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_my_profile_dob_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_gender"
                android:text="@string/profile_profile_gender"
                android:layout_below="@+id/my_profile_dob"
                android:layout_marginTop="@dimen/profile_my_profile_gender_margintop"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_my_profile_gender_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_relationship_status"
                android:text="@string/profile_profile_relationship_status"
                android:layout_below="@+id/my_profile_gender"
                android:layout_marginTop="@dimen/profile_my_profile_relationship_status_margintop"
                android:layout_marginBottom="@dimen/profile_my_profile_relationship_status_marginbottom"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="@dimen/profile_my_profile_relationship_status_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_post_button"
                android:text="@string/profile_profile_number_of_posts"
                android:layout_below="@+id/my_profile_relationship_status"
                android:background="@color/colorPrimaryDark"
                android:textSize="@dimen/profile_my_post_button_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:paddingStart="@dimen/profile_my_post_button_paddingstart"
                android:paddingEnd="@dimen/profile_my_post_button_paddingend"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_friends_button"

                android:text="@string/profile_profile_number_of_friends"
                android:layout_below="@+id/my_post_button"
                android:background="@color/colorPrimaryDark"
                android:textSize="@dimen/profile_my_friends_button_textsize"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:paddingStart="@dimen/profile_my_friends_button_paddingstart"
                android:paddingEnd="@dimen/profile_my_friends_button_paddingend"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/profile_my_friends_button_marginbottom"
                android:layout_marginTop="@dimen/profile_my_friends_button_margintop"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>