<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneLoginActivity"
    tools:ignore="MissingDefaultResource"
    android:background="@color/colorprofile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_number_input"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginTop="180dp"
                android:background="@drawable/inputs"
                android:padding="8dp"
                android:textAllCaps="false"
                android:hint="@string/phone_login_phone_number_text"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:drawableStart="@drawable/phone"
                android:inputType="phone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/verifiction_code_input"
                android:layout_below="@+id/phone_number_input"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/inputs"
                android:padding="5dp"
                android:textAllCaps="false"
                android:hint="@string/phone_login_verification_code_text"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:drawableStart="@drawable/password"
                android:visibility="gone"/>
            <Button
                android:id="@+id/send_ver_code_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/verifiction_code_input"
                android:layout_marginTop="15dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/button"
                android:padding="15dp"
                android:text="@string/phone_login_send_verification_code_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="22sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/verify_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/send_ver_code_button"
                android:layout_marginTop="8dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/button"
                android:padding="15dp"
                android:text="@string/phone_login_verify_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>