<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    tools:ignore="MissingDefaultResource"
    android:background="@color/colorprofile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/main_setup_root"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/liner"
                android:layout_marginTop="@dimen/setup_liner_margintop"
                android:layout_marginBottom="@dimen/setup_liner_marginbottom"
                android:padding="@dimen/setup_liner_padding">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/setup_setup_profile_image_width"
                    android:layout_height="@dimen/setup_setup_profile_image_height"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/profile"
                    android:id="@+id/setup_profile_image"/>
            </LinearLayout>
            <EditText
                android:id="@+id/setup_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/liner"
                android:inputType="textMultiLine"
                android:hint="@string/setup_username"
                android:padding="@dimen/setup_setup_user_name_padding"
                android:background="@drawable/inputs"
                android:drawableLeft="@drawable/username"
                android:textSize="@dimen/setup_setup_user_name_textsize"
                android:textAllCaps="false"
                />
            <EditText
                android:id="@+id/setup_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setup_user_name"
                android:layout_marginTop="@dimen/setup_setup_full_name_margintop"
                android:inputType="textMultiLine"
                android:hint="@string/setup_fullname"
                android:padding="@dimen/setup_setup_full_name_padding"
                android:background="@drawable/inputs"
                android:drawableLeft="@drawable/name"
                android:textSize="@dimen/setup_setup_full_name_textsize"
                android:textAllCaps="false"
                />
            <EditText
                android:id="@+id/setup_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setup_full_name"
                android:layout_marginTop="10dp"
                android:inputType="textMultiLine"
                android:hint="@string/setup_country"
                android:padding="14dp"
                android:background="@drawable/inputs"
                android:drawableLeft="@drawable/country"
                android:textSize="18sp"
                android:visibility="gone"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/setup_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setup_setup_save_button_margintop"
                android:layout_marginBottom="@dimen/setup_setup_save_button_marginbottom"
                android:background="@drawable/button"
                android:paddingEnd="@dimen/setup_setup_save_button_paddingend"
                android:paddingStart="@dimen/setup_setup_save_button_paddingstart"
                android:text="@string/setup_save_button"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/setup_setup_save_button_textsize"
                android:textStyle="bold"
                android:layout_below="@id/setup_country"
                android:layout_gravity="center_horizontal"
                />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>